--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -63,7 +63,7 @@ In the field of synthetic and analytical chemistry, the repository [Chemotion](h
 
 - [NOMAD](https://nomad-lab.eu/) FAIR sharing and use of materials science data 
 - [ioChem-BD](https://www.iochem-bd.org/) Repository for computational chemistry results 
-- [RADAR](https://www.radar-service.eu/radar/en/home) Repository for multi-disciplinar research data 
+- [RADAR](https://www.radar-service.eu/radar/en/home) Repository for multi-disciplinary research data 
 - [Zenodo](https://zenodo.org/) General-purpose open-access repository developed under the European OpenAIRE program and operated by CERN
 - [EUDAT CDI](https://www.eudat.eu/) Pan-European network consisting of more than 25 research organisations, data and computing centers
 - [ChemSpider](https://www.chemspider.com/) Free chemical structure database providing fast text and structure search access to over 100 million structures from hundreds of data sources
