--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -4,6 +4,14 @@ title: "ELN"
 
 # Electronic Lab Notebooks (ELNs)
 
+# Introduction
+
+The information technology is developing with a fast speed. The smartphones in our pockets are much faster than a supercomputer from the 80s. Unfortunately, this technology has not yet reached the chemical laboratories. The paper notebook is as popular as 100 years ago, and only little progress has been made into a direction of better research data management in the academic world.
+
+Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean touch screens everywhere. Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](01_fair.mdx). ELNs help to assign rich [metadata](30_metadata.mdx) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](50_data_storage.mdx).
+
+One of the most important things, that distinguishes an ELN from a white blank paper is the possibility to document metadata in a structured way, ideally in a human and machine-readable way. See the following overview for more information on the differences between blank sheets, ELNs and laboratory information management systems (LIMS).
+
 ELNs are a key prerequisite to a comprehensive, digital documentation of research data and are therefore of high importance capturing data for further analysis or a later re-use. ELNs are available as either a commercial, free, or even an Open Source solution. ELNs can be either discipline-agnostic or discipline-specific; some of them combine both aspects. The organization of work with ELNs that support chemistry-specific functions can offer several benefits such as the availability of [chemical structure identifiers](70_machine-readable_chemical_structures.mdx) and [standardized formats](40_format_standards.mdx) as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. To date, only a few electronic lab notebooks meet the basic requirements for chemical sciences. This is most likely due to the challenges arising from drawing and processing chemical structures, a crucial and central step in being able to correlate research data to the corresponding chemical reaction or structure. Some Open Source examples for systems in chemistry that offer the necessary support for chemical structures include [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/), and [Chemotion ELN](https://eln.chemotion.net/home).
 
 ## Electronic Lab Notebooks (ELNs) in NFDI4Chem
