--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -6,9 +6,9 @@ title: "ELN"
 
 ## Introduction
 
-The information technology is developing with a fast speed. The smartphones in our pockets are much faster than a supercomputer from the 80s. Unfortunately, this technology has not yet reached the chemical laboratories. The paper notebook is as popular as 100 years ago, and only little progress has been made into a direction of better research data management in the academic world.
+Information technology is always continuously developing at a fast pace. For example, the smartphones we all carry on a daily basis in our pockets are much faster than a supercomputer from the 80s which you could barely fit in an average bedroom. Unfortunately, this accelerated advancement of information technology has not yet fully reached our chemical laboratories. The paper laboratory notebook is just as popular and widespread as it was 100 years ago, with the very essence of how chemical research data is documented - literally with pen and paper - having only made little progress over the last centrury. 
 
-Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean touch screens everywhere. Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](01_fair.mdx). ELNs help to assign rich [metadata](30_metadata.mdx) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](../30_data/50_data_storage.mdx).
+Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean tablets & touch screens in every corner of your laboratory. The term Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](01_fair.mdx). ELNs help to assign rich [metadata](30_metadata.mdx) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](../30_data/50_data_storage.mdx).
 
 One of the most important things, that distinguishes an ELN from a white blank paper is the possibility to document [metadata](30_metadata.mdx) in a structured and ideally in a human as well as machine-readable way. See the following overview for more information on the differences between blank sheets, ELNs and laboratory information management systems (LIMS).
 
@@ -23,7 +23,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
 
 ## The right ELN
 
-To date, there is not one ELN, that fits the requirements for all chemical disciplines. Furthermore, only a few ELNs meet the basic requirements for chemical sciences. This is most likely due to the challenges arising from drawing and processing chemical structures, a crucial and central step in being able to correlate research data to the corresponding chemical reaction or structure. The organization of work with ELNs that support chemistry-specific functions can offer several benefits, such as the availability of [chemical structure identifiers](70_machine-readable_chemical_structures.mdx) and [standardized formats](40_format_standards.mdx) as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. Some Open Source examples for systems in chemistry that offer the necessary support for chemical structures include [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/), and [Chemotion ELN](https://eln.chemotion.net/home).
+To date, there is not one ELN, that fits the requirements for all chemical disciplines. Furthermore, only a few ELNs meet the basic requirements for chemical sciences. This is most likely due to the challenges arising from drawing and processing chemical structures, a crucial and central step in being able to correlate research data to the corresponding chemical reaction or structure. The organisation of work with ELNs that support chemistry-specific functions can offer several benefits, such as the availability of [chemical structure identifiers](70_machine-readable_chemical_structures.mdx) and [standardised formats](40_format_standards.mdx) as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. Some Open Source examples for systems in chemistry that offer the necessary support for chemical structures include [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/), and [Chemotion ELN](https://eln.chemotion.net/home).
 
 Therefore, choosing the right ELN is crucial for a successful implementation of an ELN in a laboratory. Three steps should be taken to establish an ELN: 1) Needs assessment, 2) Testing and 3) Introducing the chosen ELN.
 
