--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -6,7 +6,7 @@ title: "ELN"
 
 ## Introduction
 
-Information technology is always continuously developing at a fast pace. For example, the smartphones we all carry on a daily basis in our pockets are much faster than a supercomputer from the 80s which you could barely fit in an average bedroom. Unfortunately, this accelerated advancement of information technology has not yet fully reached our chemical laboratories. The paper laboratory notebook is just as popular and widespread as it was 100 years ago, with the very essence of how chemical research data is documented - literally with pen and paper - having only made little progress over the last centrury. 
+Information technology continuously develops at a fast pace. For example, the smartphones we all carry on a daily basis in our pockets are much faster than a supercomputer from the 80s which you could barely fit in an average bedroom. Unfortunately, this accelerated advancement of information technology has not yet fully reached our chemical laboratories. The paper laboratory notebook is just as popular and widespread as it was 100 years ago, with the very essence of how chemical research data is documented - literally with pen and paper - having only made little progress over the last centrury. 
 
 Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean tablets & touch screens in every corner of your laboratory. The term Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](01_fair.mdx). ELNs help to assign rich [metadata](30_metadata.mdx) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](../30_data/50_data_storage.mdx).
 
