--- a/docs/40_topics/10_eln.mdx
+++ b/docs/40_topics/10_eln.mdx
@@ -53,7 +53,7 @@ Table Attribution:ZB MED PUBLISSO ELN-Filter, 2921-06 english.
 
 ## Electronic Lab Notebooks (ELNs) in NFDI4Chem
 
-[NFDI4Chem](https://www.nfdi4chem.de/) will support those ELNs that are relevant for documentation of chemical research activities. This support will include hosting one ELN instance for each of the relevant ELNs at KIT for teaching and training purposes. This service will be established in 2022 to allow all scientists to compare ELNs and their functionalities. Comparing and testing different ELNs is a prerequisite for making the right choice. Furthermore, NFDI4Chem organizes various seminars with the goal of giving a first impression of different ELNs. These seminars are a good opportunity for ELN providers to demonstrate their ELN's usefulness and possible applications. For past and forthcoming seminars, please see the [Stammtisch event page](https://www.nfdi4chem.de/index.php/event/stammtisch-chemotion/).
+[NFDI4Chem](https://www.nfdi4chem.de/) will support those ELNs that are relevant for documentation of chemical research activities. This support will include hosting one ELN instance for each of the relevant ELNs at KIT for teaching and training purposes. This service will be established in 2022 to allow all scientists to compare ELNs and their functionalities. Comparing and testing different ELNs is a prerequisite for making the right choice. Furthermore, NFDI4Chem organises various seminars with the goal of giving a first impression of different ELNs. These seminars are a good opportunity for ELN providers to demonstrate their ELN's usefulness and possible applications. For past and forthcoming seminars, please see the [Stammtisch event page](https://www.nfdi4chem.de/index.php/event/stammtisch-chemotion/).
 
 ## Chemotion ELN
 
