--- a/docs/20_role/40_data_steward.mdx
+++ b/docs/20_role/40_data_steward.mdx
@@ -29,12 +29,12 @@ Chemical research is often a combination of observational data and digital data.
 
 ## Networking and Continuous Training
 
-Due to their wide breadth of duties, data stewards are continuously involved in networking, exchange, and furthering their own knowledge on RDM approaches, best practices, tools, and services. The RWTH Aachen University, for example, holds a monthly [Open RDM Network Meeting](https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/) (in German) geared at data stewards, while state initiatives such as [fdm.nrw](https://www.fdm.nrw/) offer various networking and training opportunities. NFDI4Chem also organizes an entry-level workshop series titled [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/) for [researchers](00_guide.mdx) and data stewards alike and focuses on research data management concepts and tools in chemistry.
+Due to their wide breadth of duties, data stewards are continuously involved in networking, exchange, and furthering their own knowledge on RDM approaches, best practices, tools, and services. The RWTH Aachen University, for example, holds a monthly [Open RDM Network Meeting](https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/) (in German) geared at data stewards, while state initiatives such as [fdm.nrw](https://www.fdm.nrw/) offer various networking and training opportunities. NFDI4Chem also organizes an entry-level workshop series titled [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/) for researchers and data stewards alike and focuses on research data management concepts and tools in chemistry.
 
 ## Sources and further information
 
 - [Final report: Towards FAIR data steward as profession for the lifesciences. Report of a ZonMw funded collaborative approach built on existing expertise](https://doi.org/10.5281/zenodo.3474630) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3474630.svg)](https://doi.org/10.5281/zenodo.3474630)
-- [CConnie Clare, Maria Cruz, Elli Papadopoulou, James Savage, Marta Teperek, Yan Wang, Iza Witkowska, and Joanne Yeomans. 2019.Engaging Researchers with Data Management: The Cookbook (epub).OpenBookPublishers](https://doi.org/10.11647/OBP.0185)
+- [Connie Clare, Maria Cruz, Elli Papadopoulou, James Savage, Marta Teperek, Yan Wang, Iza Witkowska, and Joanne Yeomans. 2019.Engaging Researchers with Data Management: The Cookbook (epub).OpenBookPublishers](https://doi.org/10.11647/OBP.0185)
 - [A community consultation on career tracks for data stewards - IDCC16 lightning talk and RDA VP17 poster presentation ![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4707028.svg)](https://doi.org/10.5281/zenodo.4707028)
 - German: [Aufgaben- und Kompetenzspektrum der Data Stewards an der RWTH Aachen University : generell und explizit am Beispiel des Sonderforschungsbereichs 1382](https://doi.org/10.17192/bfdm.2021.3.8352)
 - German: [Data Stewards an den TU9-Universitäten - Bestandsaufnahme, Handlungsfelder und Kooperationspotenzial](https://doi.org/10.17192/bfdm.2022.1.8364)
