fix broken links

--- a/docs/40_topics/50_ontology.mdx
+++ b/docs/40_topics/50_ontology.mdx
@@ -39,10 +39,10 @@ This tabular overview lists the suitable ontologies with regard to:
 | [CHEMINF](https://terminology.nfdi4chem.de/ts/ontologies/cheminf)  | chemistry | [CC-BY 3.0](https://creativecommons.org/licenses/by/3.0/) | BFO & OBO based | PubChem, Open PHACTS |
 | [CHMO](https://terminology.nfdi4chem.de/ts/ontologies/chmo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | Chemotion, Allotrope™ |
 | [MOP](https://terminology.nfdi4chem.de/ts/ontologies/mop)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | RXNO |
-| [RXNO](https://terminology.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | NameRXN, Wikipedia, Chemotion |
-| [OntoKin](https://www.theworldavatar.com/ontology/ontokin/) | chemistry | unknown | OntoCAPE upper level & modules | J-Park Simulator |
+| [RXNO](https://terminoloygy.nfdi4chem.de/ts/ontologies/rxno)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO based | NameRXN, Wikipedia, Chemotion |
+| [OntoKin](http://www.theworldavatar.com/kb/ontokin/ontokin.owl) | chemistry | unknown | OntoCAPE upper level & modules | J-Park Simulator |
 | [AFO](https://www.ebi.ac.uk/ols/ontologies/afo)  | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO classes & relations, many AFO- some custom OBO-modules  | Allotrope™ |
-| [PROCO](https://terminology.nfdi4chem.de/ts/ontologies/proco) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO/AFO & OBO based | Allotrope™ |
+| [PROCO](https://raw.githubusercontent.com/proco-ontology/PROCO/main/proco.owl) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO/AFO & OBO based | Allotrope™ |
 | [MS](https://terminology.nfdi4chem.de/ontologies/ms) | chemistry | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | BFO & OBO mapping possible | mzML |
 | [nmrCV](https://terminology.nfdi4chem.de/ontologies/nmrcv) | chemistry | [Public Domain Mark 1.0](https://creativecommons.org/publicdomain/mark/1.0/deed) | BFO & OBO mapping possible | MetaboLights, HMDB |
 | [BFO](https://terminology.nfdi4chem.de/ontologies/bfo) | upper level (classes only) | [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/) | OBO backbone | >300 ontologies & >50 organizations, PubChem |
@@ -62,7 +62,7 @@ This tabular overview lists the suitable ontologies with regard to:
 The second version of the **Basic Formal Ontology ([BFO 2.0](https://terminology.nfdi4chem.de/ts/ontologies/bfo))** is used as the upper framework by the [The Open Biological and Biomedical Ontology (OBO) Foundry](http://www.obofoundry.org/). Hence, all ontologies that are part of the OBO Library or that strive to be compatible with OBO need to be aligned to this BFO version. Although the specification reference of BFO 2.0 includes relations, their [temporal aspects cause problems](https://github.com/oborel/obo-relations/wiki/ROAndBFO), which is why in the OWL implementation of the BFO 2.0 specification the OBO community decided to only use the BFO 2.0 classes and to curate some of its core relations in the OBO Relation Ontology. In order to become an ISO Standard, the BFO developers have released a newer version called the [BFO 2020](https://basic-formal-ontology.org/bfo-2020.html) that also includes relations. Since these relations still use the previously critiqued temporalized approach, the OBO community has not adapted BFO 2020 as its upper framework so far. 
 
 ### SIO
-The **Semanticscience Integrated Ontology ([SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio))** is another upper level ontology that provides basic concepts (e.g. objects, information and processes) as well as their associated basic characteristics (e.g. functions, qualities and roles). It also contains many basic relations (e.g. *part of*, *has participant* or *is about*) needed in the description of real objects, processes and information. It has been used in [Bio2RDF](http://bio2rdf.org/), [SADI Semantic Web Services](http://sadiframework.org), [DisGeNET](http://rdf.imim.es/DisGeNET.html), [PubChemRDF](http://pubchem.ncbi.nlm.nih.gov/rdf/), [EBI's Gene Expression Atlas](https://www.ebi.ac.uk/rdf/documentation/expressionatlas/) and the [Graph4Code project](https://wala.github.io/graph4code/). To foster semantic interoperability, SIO is mapped to BFO and RO for important core classes and relations.
+The **Semanticscience Integrated Ontology ([SIO](https://terminology.nfdi4chem.de/ts/ontologies/sio))** is another upper level ontology that provides basic concepts (e.g. objects, information and processes) as well as their associated basic characteristics (e.g. functions, qualities and roles). It also contains many basic relations (e.g. *part of*, *has participant* or *is about*) needed in the description of real objects, processes and information. It has been used in [Bio2RDF](http://bio2rdf.org/), [SADI Semantic Web Services](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3212890/), [DisGeNET](https://www.disgenet.org/rdf), [PubChemRDF](http://pubchem.ncbi.nlm.nih.gov/rdf/), [EBI's Gene Expression Atlas](https://www.ebi.ac.uk/rdf/documentation/expressionatlas/) and the [Graph4Code project](https://wala.github.io/graph4code/). To foster semantic interoperability, SIO is mapped to BFO and RO for important core classes and relations.
 
 ### OntoCape
 The **ontology for computer-aided chemical process engineering ([OntoCAPE](https://doi.org/10.1016/j.engappai.2006.06.010))** defines fundamental concepts and relations such as data structures, part-whole relations, processes, material, time and space or SI units. OntoCAPE is designed to be reusable and extendable in many different contexts of computer-aided process engineering, without the need for other ontologies. However, as of yet, no evidence could be found to indicate that the meta, upper and conceptual layers of OntoCAPE are being used outside of the network in which it is being developed. Similarly, we could not find any references regarding the interoperability between BFO based ontologies and OntoCAPE. 
@@ -113,7 +113,7 @@ MOP focuses on the conceptualization of general molecular processes, such as *ad
 RXNO expands the molecular processes defined in MOP to cover synthetic organic reactions with small-molecules, such as the well-known Diels-Alder cyclization. The top level classification of RXNO contains reactions that change the skeleton (e.g. cleaving, condensation, rearrangement), as well as reactions that preserve the skeleton (e.g. addition, elimination, protection or deprotection). The classification of named reactions in RXNO is based on two principles, first comparing the longest carbon chains in the reactants and products and then checking whether a ring system is created, broken or altered. For the formalization of its classification, RXNO also reuses chemical entities from ChEBI as well as classes from OBI and IAO. The use of OBO unsupported BFO relations is, as in the other two RSC ontologies, also in RXNO a minor issue that should be solved. Another rather easily resolvable issue concerns the current chosen import strategy of MOP classes, as it leaves room for curation errors. A flowchart and documentation on how to classify named reactions in RXNO allows an open source based community collaboration and thus a timely addition of not yet covered reactions.
 
 ### OntoKin
-The **Ontology for Chemical Kinetic ReactionMechanisms ([OntoKin](https://doi.org/10.1021/acs.jcim.9b00960))** is intended to be used for the simulation and understanding of the behavior of chemical processes and can be seen as a domain specific extension of the OntoCape ontology. Its scope can be divided into five modules: reaction mechanism, phase, chemical reaction, rate coefficient and chemical species. These modules define the classes (e.g.,*BulkPhase* or *GasPhaseReaction*), relations (e.g.,*hasElement* or *belongsToPhase*), and axioms (e.g.,*ChemicalReaction* always has a *Reactant*, *Product*, *ReactionMetadata*, *ReactionOrder* and *StoichiometricCoefficient*) that are needed for a comprehensive semantic description of reaction kinetics. From OntoCAPE the classes *ChemicalReaction*,*ChemicalSpecies*,*ReactionRateCoefficient*,*ThermoModel* and *StoichiometricCoefficient* are reused, but no terms from other chemical ontologies are reused. Thus, OntoKin on the one hand has the advantage of having very few external dependencies, which makes it robust in terms of semantic stability and easier to implement in applications, such as the [prototype](https://www.theworldavatar.com/ontokin) of an open access knowledge graph. On the other hand however, these few dependencies also means that data described with OntoKin is not as interoperable as data described with an OBO compliant ontology. The lack of meta-information for OntoKin's terms as well as its sparse documentation in general might be a possible hindrance for users.
+The **Ontology for Chemical Kinetic ReactionMechanisms ([OntoKin](https://doi.org/10.1021/acs.jcim.9b00960))** is intended to be used for the simulation and understanding of the behavior of chemical processes and can be seen as a domain specific extension of the OntoCape ontology. Its scope can be divided into five modules: reaction mechanism, phase, chemical reaction, rate coefficient and chemical species. These modules define the classes (e.g.,*BulkPhase* or *GasPhaseReaction*), relations (e.g.,*hasElement* or *belongsToPhase*), and axioms (e.g.,*ChemicalReaction* always has a *Reactant*, *Product*, *ReactionMetadata*, *ReactionOrder* and *StoichiometricCoefficient*) that are needed for a comprehensive semantic description of reaction kinetics. From OntoCAPE the classes *ChemicalReaction*,*ChemicalSpecies*,*ReactionRateCoefficient*,*ThermoModel* and *StoichiometricCoefficient* are reused, but no terms from other chemical ontologies are reused. Thus, OntoKin on the one hand has the advantage of having very few external dependencies, which makes it robust in terms of semantic stability and easier to implement in applications, such as the prototype of an open access knowledge graph. On the other hand however, these few dependencies also means that data described with OntoKin is not as interoperable as data described with an OBO compliant ontology. The lack of meta-information for OntoKin's terms as well as its sparse documentation in general might be a possible hindrance for users.
 
 ### AFO
 The **Allotrope Foundation Merged Ontology Suite ([AFO](https://www.allotrope.org/ontologies))**, first published in March 2018, is a collection of taxonomies and ontologies developed by the Allotrope Foundation that is intended as a standard language for describing equipment, processes, materials, and results. AFO provides the semantic context in a technology stack, called Allotrope Framework, which also consists of the Allotrope Data Model (ADM) and the AllotropeData Format (ADF). The goal of ADF is to unify the laboratory IT landscape by becoming the gold standard with regard to the many different data formats present today. According to [Millecam et al.](https://doi.org/10.1016/j.drudis.2021.03.028), its adoption is still at the very beginning.
