fix: broken URL

--- a/docs/40_topics/40_format_standards.mdx
+++ b/docs/40_topics/40_format_standards.mdx
@@ -29,7 +29,7 @@ Some of these formats have a corresponding schema format, which allows a formali
 
 [Extensible Markup Language (XML)](https://www.w3.org/XML/Core/#Publications) is a markup language to structure documents. The Document is organised by elements and their attributes and the scope of an element is marked by tags for the start and the end.  Elements can be nested and may include values. This allows for a representation of complex  data models, including multidimensional data and hierarchies. Because an XML file is a text file it is readable for humans, but the repeated tags distract from the information contained in values. Because of the verbosity XML files tend be grow fast and are often huge compared to other formats. Thus, XML allows for large datasets to store these as [BASE64](https://doi.org/10.17487%2FRFC3548) encoded binaries. XML allows straight forward definition of specific formats by schemas and [XML Schema Definition (XSD)](https://www.w3.org/TR/xmlschema11-1/) is the most common standard for these. Implementations for reading, writing and validating XML files exist in most programming languages. For these reasons, many file formats in chemistry are based on XML.
 
-As XML, the [Javascript Object Notation (JSON)](https://www.ecma-international.org/publications-and-standards/standards/ecma-404/) was created to exchange data in the World Wide Web. Where XML has element tags for structuring the document, JSON uses braces, brackets and commas. Because of less verbosity the format is better readable for humans and files may be smaller. With [JSON Schema](http://json-schema.org/specification.html) there is a draft for a schema format to describe JSON documents. Even if JSON is less common for file formats, it is often used if data are exchanged by Application Programming Languages (API).
+As XML, the [Javascript Object Notation (JSON)](https://www.ecma-international.org/wp-content/uploads/ECMA-404_2nd_edition_december_2017.pdf) was created to exchange data in the World Wide Web. Where XML has element tags for structuring the document, JSON uses braces, brackets and commas. Because of less verbosity the format is better readable for humans and files may be smaller. With [JSON Schema](http://json-schema.org/specification.html) there is a draft for a schema format to describe JSON documents. Even if JSON is less common for file formats, it is often used if data are exchanged by Application Programming Languages (API).
 
 Single datasets may be bundled to be stored as one unit, or large datasets may be split up to smaller files for better handling. Container formats allow to retain the relationship between the datafiles. This can be achieved by interlinking metadata in the datafiles or metafiles, by grouping files in containers or archives like [zip](https://www.iso.org/standard/60101.html) or tar, or by structured container file formats. An example for the cont approach is [HDF5](https://www.hdfgroup.org/solutions/hdf5/), which allows to combine a file system like structure with metadata. There are many implementations and tools for HDF5 and some formats for chemical data are based on it.
 
